--- a/content/W17.html
+++ b/content/W17.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='tetris-add score(考試用).html'>tetris-add score(考試用)</a><li><a href='tetris-add score.html'>tetris-add score</a><li><a href='tetris-add score normal.html'>tetris-add score normal</a></li></ul><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
+                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='tetris-add score(考試用).html'>tetris-add score(考試用)</a><li><a href='tetris-add score.html'>tetris-add score</a><li><a href='tetris-add score normal.html'>tetris-add score normal</a></li></ul><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a><li><a href='W18.html'>W18</a><li><a href='progress rate.html'>progress rate</a><li><a href='midterm.html'>midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,12 +139,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>W17</h1>
+    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>W17</h1>
 <p><a href="https://gist.githubusercontent.com/shih1717/187d540095cfbde066c522c36405781e/raw/72f8d46dd484a79810d9d95288db6fc191359abc/%25E8%25A8%25BB%25E8%25A7%25A3">程式註解</a></p>
 <p>剛開始練了一兩次熟悉一下速度後面就可以了，也有做過50fps的但是跟25fps的成績反而是差不多的</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/SHZ5eMPbHhs" title="YouTube video player" width="560"></iframe></p>
 <p>評分依據:有些課程沒有弄到完全懂，但是作業都有交，也有些是與同學討論做出來的，倉儲也有更新。</p>
-<p>課程心得:這學期有座wink投影片、nginx、虛擬主機和有些上學期的可攜，最讓我有興趣的是虛擬主機，也花最多時間去玩虛擬主機。</p><br />W14 << <a href='W14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+<p>課程心得:這學期有座wink投影片、nginx、虛擬主機和有些上學期的可攜，最讓我有興趣的是虛擬主機，也花最多時間去玩虛擬主機。</p>
+<br />W14 << <a href='W14.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
         
     <!-- footer -->
       <div class="container">
